@@ -6,7 +6,6 @@ Revisit interactions, e.g. the following doesn't work: formula=log(obs,logexp)~(
 Revisit cross-classification specification as this should apply to the whole model, rather than level by level
 Allow specification of all ID/Weight columns instead of assuming they are consecutive
 Fix CAR model example when running in OpenBUGS
-Don't generate starting residuals for cross-classified models
 Automatically switch equation display for cross-classified models
 
 Data Checks:
